@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use export_to_level instead of $Exporter::ExportLevel
 
 0.001     2015-09-06 19:26:39 EDT
   - First release
